@@ -29,12 +29,13 @@ class ExitStatusIntegrationTests {
 
     private final static String JARNAME = "target/nbr.jar";
 
+
     @Test
     void testExitStatusOnBadParam() {
         ProcessInvoker invoker = new ProcessInvoker();
         invoker.setLogDir("logs/test");
         ProcessResult result = invoker.run("exitstatus_badparam", 15,
-                java, "-jar", JARNAME, "--logs-dir", "logs/test/badparam/",
+                java, "--enable-preview", "-jar", JARNAME, "--logs-dir", "logs/test/badparam/",
                 "badparam"
         );
         assertThat(result.exception).isNull();
@@ -48,7 +49,7 @@ class ExitStatusIntegrationTests {
         ProcessInvoker invoker = new ProcessInvoker();
         invoker.setLogDir("logs/test");
         ProcessResult result = invoker.run("exitstatus_initexception", 15,
-                java, "-jar", JARNAME, "--logs-dir", "logs/test/initerror", "run",
+                java, "--enable-preview", "-jar", JARNAME, "--logs-dir", "logs/test/initerror", "run",
                 "driver=diag", "op=initdelay:initdelay=notanumber"
         );
         assertThat(result.exception).isNull();
@@ -64,7 +65,8 @@ class ExitStatusIntegrationTests {
 
         // Forcing a thread exception via basic command issue.
         ProcessResult result = invoker.run("exitstatus_threadexception", 30,
-                "java", "-jar", JARNAME, "--logs-dir", "logs/test/threadexcep", "--logs-level", "debug", "run",
+                "java", "--enable-preview", "-jar", JARNAME, "--logs-dir", "logs/test/threadexcep", "--logs-level",
+            "debug", "run",
                 "driver=diag", "cyclerate=10", "not_a_thing", "cycles=100", "-vvv"
         );
         String stdout = String.join("\n", result.getStdoutData());
@@ -77,7 +79,7 @@ class ExitStatusIntegrationTests {
         ProcessInvoker invoker = new ProcessInvoker();
         invoker.setLogDir("logs/test");
         ProcessResult result = invoker.run("exitstatus_asyncstoprequest", 60,
-                "java", "-jar", JARNAME, "--logs-dir", "logs/test/asyncstop", "--logs-level", "debug", "run",
+                "java", "--enable-preview", "-jar", JARNAME, "--logs-dir", "logs/test/asyncstop", "--logs-level", "debug", "run",
                 "driver=diag", "threads=2", "cyclerate=10", "op=erroroncycle:erroroncycle=10", "cycles=50", "-vvv"
         );
         assertThat(result.exception).isNull();
